<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MNN-TaoAvatar</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="release_to_send">Release to Send, Slide up to cancel</string>
    <string name="release_to_cancel">Release to cancel</string>
    <string name="start_chat">Chat With Tao</string>
    <string name="connecting">Connecting…</string>
    <string name="listening">Listening…</string>
    <string name="click_to_stop">Click To Stop</string>
    <string name="rotate_hint">Slide to Rotate the avatar</string>
    <string name="settings">Settings</string>
    <string name="usage_and_feedback">Star MNN in Github</string>
    <string name="ll_prompt">Llm System Prompt</string>
    <string name="current_version">Current Version:%1$s</string>
    <string name="download">Download</string>
    <string name="download_update_available">Update Available: (%1$s)</string>
    <string name="check_for_update">Check for update</string>
    <string name="version_info">Version Info</string>
    <string name="wait_install_apk">please wait for download complete and install</string>
    <string name="get_update_info_failed">get update info failed</string>
    <string name="no_update">No update available</string>
    <string name="llm_prompt_default" >Your name is Tao, you are a helpful assistant.</string>
    <string name="llm_welcome_text" >Hello, I am Tao.</string>
    <string name="download_model">Download Resources</string>
    <string name="download_progress">%1$s/%2$s Downloaded\n Speed: %3$s</string>
    <string name="downloading">Downloading…</string>
    <string name="download_error">Press to Retry</string>
    <string name="download_prepareing">Download Preparing</string>
    <string name="debug_model_size">Local LLM Model: Qwen2.5–1.5B\nModel Size:%1$s\nTTS Model Size:%2$s\nA2BS Model Size:%3$s\nASR Model Size:%4$s\nNNR Model Size:%5$s\n"</string>
    <string name="show_debug_info">Show Debug Info</string>
    <string name="check_for_update_summary" />
    <string name="inference_by_mnn">Inference Local by MNN</string>
    <string name="record_permission_denied">Record permission denied, please grant it</string>
    <string name="tts_voice_title">Voice</string>
    <string name="tts_voice_summary">%s</string>
    <string name="tts_speaker_male_1">Male Voice 1</string>
    <string name="tts_speaker_male_2">Male Voice 2</string>
    <string name="tts_speaker_female_1">Female Voice 1</string>
    <string name="tts_speaker_female_2">Female Voice 2</string>

</resources>
