<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- TTS 设置分类 -->
    <PreferenceCategory android:title="TTS Settings">
        <ListPreference
            android:key="tts_speaker_id"
            android:title="@string/tts_voice_title"
            android:summary="@string/tts_voice_summary"
            android:entries="@array/tts_speaker_names"
            android:entryValues="@array/tts_speaker_ids"
            android:defaultValue="F1" />
        
<!--        <SeekBarPreference-->
<!--            android:key="tts_speed"-->
<!--            android:title="Speech Speed / 语速"-->
<!--            android:summary="Adjust TTS speech speed"-->
<!--            android:defaultValue="10"-->
<!--            android:max="20"-->
<!--            android:min="5"-->
<!--            android:showSeekBarValue="true" />-->
    </PreferenceCategory>

    <!-- 现有设置 -->
    <EditTextPreference
        android:key="llm_prompt"
        android:title="@string/ll_prompt"
        android:summary="You are a helpful assistant."
        android:defaultValue=""/>

    <CheckBoxPreference
        android:key="show_debug_info"
        android:title="@string/show_debug_info"
        android:defaultValue="true"/>

    <Preference
        android:key="check_update"
        android:title="@string/version_info"
        android:summary="@string/check_for_update_summary" />

</PreferenceScreen>
