<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.taobao.meta.avatar.nnr.AvatarTextureView
        android:id="@+id/surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <ImageView
        android:id="@+id/img_place_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_default"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/rotate_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="2dp"
        android:paddingBottom="3dp"
        android:visibility="gone"
        android:textSize="18sp"
        tools:visibility="visible"
        android:background="@drawable/text_hint_background"
        android:text="@string/rotate_hint"
        android:layout_centerInParent="true"
/>
    <Button
        android:id="@+id/button_download"
        android:visibility="visible"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        tools:visibility="visible"
        android:text="@string/download_model"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="#333"
        style="@style/EnableButtonStatus"/>

    <TextView
        android:id="@+id/text_download_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_centerInParent="true"
        tools:text="1M/10M downloaded"
        tools:visibility="gone"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button_start_chat"
        android:visibility="gone"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        tools:visibility="visible"
        android:text="@string/start_chat"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="#333"
        style="@style/EnableButtonStatus"/>

    <Button
        android:id="@+id/button_home_page"
        android:visibility="visible"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        tools:visibility="visible"
        android:text="@string/usage_and_feedback"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/button_start_chat"
        android:layout_marginBottom="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="#333"
        style="@style/EnableButtonStatus"/>

    <Button
        android:id="@+id/button_settings"
        android:visibility="visible"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        tools:visibility="visible"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/button_home_page"
        android:layout_marginBottom="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="#333"
        style="@style/EnableButtonStatus"/>

    <Button
        android:id="@+id/button_test_tts"
        android:visibility="gone"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="TestTts"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/button_settings"
        android:layout_marginBottom="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="#333"
        style="@style/EnableButtonStatus"/>

    <View
        android:id="@+id/not_available_mask"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone"
        android:background="#66000000"/>
    <FrameLayout
        android:id="@+id/text_status_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/text_status"
            android:text="@string/connecting"
            android:visibility="invisible"
            android:layout_width="130dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:visibility="visible" />
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/button_end_call"
        android:layout_width="68dp"
        android:layout_height="68dp"
        app:cardCornerRadius="34dp"
        android:visibility="invisible"
        tools:visibility="visible"
        android:layout_marginBottom="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:foreground="?attr/selectableItemBackground"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="#CCFFFFFF"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            app:srcCompat="@drawable/endcall"
        />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/button_toggle_text"
        android:layout_width="68dp"
        android:layout_height="68dp"
        app:cardCornerRadius="34dp"
        android:visibility="invisible"
        tools:visibility="visible"
        android:layout_marginBottom="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="#FFFFFF"
        >
        <ImageView
            android:id="@+id/button_toggle_text_image"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/text_off"
            />
    </androidx.cardview.widget.CardView>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@id/text_status_layout" >
    <TextView
        android:id="@+id/chat_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="200dp"
        android:layout_gravity="bottom|start"
        android:padding="16dp"
        tools:visibility="gone"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:textSize="16sp"
        android:gravity="bottom|start"
        android:textColor="#333333"
        />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/debug_layout"
        android:visibility="gone"
        android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/btn_voice_recording"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        >
        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/voice_recording_wav"
            android:background="#88F"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/SpinKitView.Small.Wave"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:text="点击交谈"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/text_voice_hint"
            android:layout_width="wrap_content"
            tools:text="@string/release_to_send"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:visibility="gone"
            android:layout_marginBottom="75dp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/test_tts_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="410dp"
        android:layout_weight="0.0"
        android:text="Test_TTS"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
/>
    <Button
        android:id="@+id/test_a2bs_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:visibility="visible"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.0"
        android:text="Test_A2BS"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/test_tts_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/test_llm_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.0"
        android:text="Test_LLM"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/test_a2bs_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/test_asr_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.0"
        android:text="Test_ASR"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/test_llm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:id="@+id/button_debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        android:layout_alignParentEnd="true"/>
    <TextView
        android:id="@+id/text_debug_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_below="@id/button_debug"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="14dp"
        android:layout_alignParentEnd="true"
        android:gravity="right"
        tools:text="本地LLM模型: Qwen2.5-1.5B\nLLM模型大小:1.5Gb\nTTS模型大小:777M\nASR模型大小:1.5G\nNNR文件大小:1.5G"/>
    <TextView
        android:text="@string/inference_by_mnn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>